# passmgr

./: Cargo.toml  README.md  roadmap.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  credentials.rs  crypto.rs  lib.rs  logging.rs  main.rs  manager.rs  repl.rs  storage.rs  trie.rs
src/shell/: command.rs  completer.rs  highlighter.rs  hints.rs  history.rs  mod.rs
src/shell/commands/: add.rs  get.rs  help.rs  list.rs  mod.rs  quit.rs  remove.rs
tests/: integration_tests.rs
