[package]
name = "passmgr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shell-words = "1.1.0"
rpassword = "7.4.0"
dirs-next = "2.0.0"
base64 = "0.22.1"
rand = "0.9.2"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
