[package]
name = "passmgr"
version = "0.1.0"
edition = "2024"

[lib]
name = "passmgr"
path = "src/lib.rs"

[[bin]]
name = "passmgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rpassword = "7.4.0"
dirs-next = "2.0.0"
base64 = "0.22.1"
rand = "0.9.2"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rustyline = "17.0.2"
log = "0.4"
simplelog = "0.12"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
